# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-storages-s3-env
version = 2019.8.11
url = https://github.com/andrewp-as-is/django-storages-s3-env
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django-storages s3 env

[options]
install_requires = 
	awscli
	setuptools
scripts = 
	scripts/storages-s3-create-env
